# Face-Data-collection-and-Gallery-management-application

./: .gitignore  Dept_data.db  README copy.md  README.md  ecosystem.config.js  generate_ssl_certs.sh  launch.sh  pyproject.toml  requirements.txt  setup-production.sh
certs/: cert.pem  key.pem
data/: app.db
data_collection/: launch.sh
data_collection/server/: app.py  cert.pem  db_utils.py  key.pem  start_app.sh
data_collection/server/static/: about.html  index.html
data_collection/server/static/css/: style.css
data_collection/server/static/js/: app.js
src/: database.py  gallery_manager.py  main.py  migrate_database.py  process_test.py
src/yolo/: .python-version
static/: about.html  index.html
static/css/: style.css  toast.css
static/js/: app.js  dropdown-debug.js
