[project]
name = "face-data-collection-and-gallery-management-application"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "albumentations>=2.0.8",
    "flask-cors>=6.0.1",
    "opencv-python>=4.11.0.86",
    "qrcode>=8.2",
    "ultralytics>=8.3.159",
]
